[gd_scene load_steps=9 format=3 uid="uid://5lghmcmrvq0b"]

[ext_resource type="Script" uid="uid://djryvpj06ql4" path="res://scripts/ball.gd" id="1_ni31h"]
[ext_resource type="Script" uid="uid://bp14lx0uwiq1c" path="res://scripts/paddle_1.gd" id="2_l25rm"]
[ext_resource type="Script" uid="uid://dq6icrcficado" path="res://scripts/paddle_2.gd" id="3_wupbt"]
[ext_resource type="FontFile" uid="uid://df68awn28600l" path="res://assets/ARCADECLASSIC.TTF" id="4_wclrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cj0n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(20, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(20, 648)

[node name="game" type="Node2D"]

[node name="ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("1_ni31h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_8cj0n")

[node name="ColorRect" type="ColorRect" parent="ball"]
offset_right = 20.0
offset_bottom = 20.0

[node name="separator" type="ColorRect" parent="."]
offset_left = 576.0
offset_right = 596.0
offset_bottom = 648.0

[node name="paddle1" type="StaticBody2D" parent="."]
position = Vector2(20, 324)
collision_mask = 3
script = ExtResource("2_l25rm")

[node name="ColorRect" type="ColorRect" parent="paddle1"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 20.0
offset_bottom = 40.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle1"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1112, 324)
collision_mask = 3
script = ExtResource("3_wupbt")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 20.0
offset_bottom = 40.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders"]
position = Vector2(576, -10)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="borders"]
position = Vector2(576, 658)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="scoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(1162, 324)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="scoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-10, 324)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="scores" type="CanvasGroup" parent="."]

[node name="right" type="Label" parent="scores"]
offset_left = 482.0
offset_top = 26.0
offset_right = 537.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("4_wclrn")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="left" type="Label" parent="scores"]
offset_left = 636.0
offset_top = 27.0
offset_right = 691.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("4_wclrn")
theme_override_font_sizes/font_size = 100
text = "0"

[connection signal="body_entered" from="scoreRight" to="ball" method="_on_score_right_body_entered"]
[connection signal="body_entered" from="scoreLeft" to="ball" method="_on_score_left_body_entered"]
[connection signal="timeout" from="Timer" to="ball" method="_on_timer_timeout"]
